src/objects/cb5__CBMapping__c.object
<CustomObject>
    <fields>
        <fullName>cb5__ResultSObject__c</fullName>
        <label>Result sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__ResultType__c</fullName>
        <description>Result records sObject name</description>
        <inlineHelpText>Result records sObject name</inlineHelpText>
        <label>Result Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceFilter__c</fullName>
        <description>Filter string for source records</description>
        <inlineHelpText>Filter string for source records</inlineHelpText>
        <label>Source Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__SourceName__c</fullName>
        <defaultValue>&quot;Name&quot;</defaultValue>
        <label>Source Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceSObject__c</fullName>
        <label>Source sObject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceSubtype__c</fullName>
        <label>Source Subtype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SourceType__c</fullName>
        <description>Source sObject type name</description>
        <inlineHelpText>Source sObject type name</inlineHelpText>
        <label>Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cb5__SpecialFilter__c</fullName>
        <label>Special Filter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cb5__Type__c</fullName>
        <description>Name of mapped analytics</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CB Mapping</label>
    <nameField>
        <label>CB Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CB Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>